boreal/tests/assets/invalid_files/parsing/string_modifier_incompatible.yar
// [error: string modifiers xor and nocase are incompatible]
rule a {
    strings:
        $a = "a" xor private nocase
    condition:
        $a
}
